welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:4: error: type mismatch;
 found   : Unit
 required: Int
	else if ( speed>=81) {return 2}
             ^